--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Page Links</title>
+</head>
+<body>
+    <h1>Links to Different Web Pages</h1>
+    <ul>
+        <li><a href="Physics/first_paper/Chapter_1/Topon/part_1/omr.html">Page 1</a></li>
+        <li><a href="https://www.example.com/page2.html">Page 2</a></li>
+        <li><a href="https://www.example.com/page3.html">Page 3</a></li>
+        <!-- Add more links as needed -->
+    </ul>
+</body>
+</html>
 
