--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Links to Different Web Pages</h1>
     <ul>
-        <li><a href="Physics/first_paper/Chapter_1/Topon/part_1/omr.html">Page 1</a></li>
+        <li><a href="room1/omr.html">Page 1</a></li>
         <li><a href="https://www.example.com/page2.html">Page 2</a></li>
         <li><a href="https://www.example.com/page3.html">Page 3</a></li>
         <!-- Add more links as needed -->
