--- a/room4/omr.html
+++ b/room4/omr.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="ExamRoom.ico" type="image/x-icon">
 
 <link rel="stylesheet" href="styles.css">
-<script src="answerSheet.js"></script>
+<script src="../answerSheet.js"></script>
 </head>
 <body>
 <div class="container">
