--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -19,24 +20,27 @@
 
         h1 {
             text-align: center;
+            font-size: 24px;
+            margin-bottom: 30px;
         }
 
         ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
-            text-align: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         li {
-            margin: 10px 0;
+            margin: 10px;
         }
 
         a {
             text-decoration: none;
             color: #ffffff;
             font-size: 18px;
-            display: inline-block;
             padding: 10px 20px;
             border: 2px solid #42a5f5;
             border-radius: 5px;
@@ -46,6 +50,17 @@
         a:hover {
             background-color: #42a5f5;
             border-color: #ffffff;
+        }
+
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 20px;
+                margin-bottom: 20px;
+            }
+            a {
+                font-size: 16px;
+                padding: 8px 16px;
+            }
         }
     </style>
 </head>
