--- a/room1/omr.html
+++ b/room1/omr.html
@@ -15,7 +15,7 @@
 
 <div id="upload-container">
         <br><br><br><br>
-        <h1>Upload Image</h1>
+        <h5><i>Click the button bellow to choose your question</i></h5>
         <label for="image-upload" id="upload-button">Choose Image</label>
         <input type="file" accept="image/*" id="image-upload" onchange="previewImage(event)">
         <div id="image-preview"></div>
