--- a/room1/omr.html
+++ b/room1/omr.html
@@ -29,6 +29,8 @@
     
 <div class="container">
     <h1 id="headtext">OMR Answer Sheet Generator</h1>
+   
+     <div class="alets"> </div>   
     <button onclick="generateAnswerSheet()" id="generatedText">Generate Answer Sheet</button>
     <div id="result" style="float: right; margin-right: 10px;"></div> <!-- Result will be displayed here -->
     <div id="answerSheet"></div>
