--- a/room1/omr.html
+++ b/room1/omr.html
@@ -12,7 +12,8 @@
 <body>
 
 <div id="upload-container">
-        <h1>Upload Image</h1>
+        <br><br><br>
+        <h4><i>Choose your question from your device</i></h4>
         <label for="image-upload" id="upload-button">Choose Image</label>
         <input type="file" accept="image/*" id="image-upload" onchange="previewImage(event)">
         <div id="image-preview"></div>
