--- a/room1/omr.html
+++ b/room1/omr.html
@@ -11,6 +11,21 @@
 </head>
 <body>
 
+
+  <div class="gallery">
+        <img src="question1.jpg" alt="Photo 1" class="photo">
+        <img src="question2.jpg" alt="Photo 2" class="photo">
+        <img src="question3.jpg" alt="Photo 3" class="photo">
+        <img src="question4.jpg" alt="Photo 4" class="photo">
+  </div>      
+
+
+
+
+
+
+
+        
 <div id="upload-container">
         <br><br><br>
         <h4><i>Choose your question from your device</i></h4>
