--- a/room1/omr.html
+++ b/room1/omr.html
@@ -12,12 +12,22 @@
 <body>
 
 
-  <div class="gallery">
-        <img src="question1.jpg" alt="Photo 1" class="photo">
-        <img src="question2.jpg" alt="Photo 2" class="photo">
-        <img src="question3.jpg" alt="Photo 3" class="photo">
-        <img src="question4.jpg" alt="Photo 4" class="photo">
-  </div>      
+    <div id="chatBubble" class="chat-bubble">
+        💬
+    </div>
+    <div id="chatWindow" class="chat-window">
+        <div class="chat-header">
+            <span>Photos</span>
+            <button id="closeChat">&times;</button>
+        </div>
+        <div class="image-container">
+            <img src="photo1.jpg" alt="Photo 1">
+            <img src="photo2.jpg" alt="Photo 2">
+            <img src="photo3.jpg" alt="Photo 3">
+            <img src="photo4.jpg" alt="Photo 4">
+        </div>
+    </div>
+  
 
 
 
