--- a/room1/omr.html
+++ b/room1/omr.html
@@ -21,10 +21,10 @@
             <button id="closeChat">&times;</button>
         </div>
         <div class="image-container">
-            <img src="photo1.jpg" alt="Photo 1">
-            <img src="photo2.jpg" alt="Photo 2">
-            <img src="photo3.jpg" alt="Photo 3">
-            <img src="photo4.jpg" alt="Photo 4">
+            <img src="question1.jpg" alt="Photo 1">
+            <img src="question2.jpg" alt="Photo 2">
+            <img src="question3.jpg" alt="Photo 3">
+            <img src="question4.jpg" alt="Photo 4">
         </div>
     </div>
   
