--- a/room1/omr.html
+++ b/room1/omr.html
@@ -24,19 +24,19 @@
         <div class="image-container">
             <div class="image-item">
                 <p>Photo 1 Description</p>
-                <img src="photo1.jpg" alt="Photo 1">
+                <img src="question1.jpg" alt="Photo 1">
             </div>
             <div class="image-item">
                 <p>Photo 2 Description</p>
-                <img src="photo2.jpg" alt="Photo 2">
+                <img src="question2.jpg" alt="Photo 2">
             </div>
             <div class="image-item">
                 <p>Photo 3 Description</p>
-                <img src="photo3.jpg" alt="Photo 3">
+                <img src="question3.jpg" alt="Photo 3">
             </div>
             <div class="image-item">
                 <p>Photo 4 Description</p>
-                <img src="photo4.jpg" alt="Photo 4">
+                <img src="question4.jpg" alt="Photo 4">
             </div>
         </div>
     </div>
