--- a/room1/omr.html
+++ b/room1/omr.html
@@ -20,7 +20,7 @@
     
     
     <div id="chatBubble" class="chat-bubble">
-        💬
+        💬 QN Papers
     </div>
     <div id="chatWindow" class="chat-window">
         <div class="chat-header">
