--- a/room1/omr.html
+++ b/room1/omr.html
@@ -30,20 +30,33 @@
         <div class="image-container">
             <div class="image-item">
                 <p>Photo 1 Description</p>
-                <img src="question1.jpg" alt="Photo 1">
+                <img src="1p.jpg" alt="Photo 1">
             </div>
             <div class="image-item">
                 <p>Photo 2 Description</p>
-                <img src="question2.jpg" alt="Photo 2">
+                <img src="2p.jpg" alt="Photo 2">
             </div>
             <div class="image-item">
                 <p>Photo 3 Description</p>
-                <img src="question3.jpg" alt="Photo 3">
+                <img src="3p.jpg" alt="Photo 3">
             </div>
             <div class="image-item">
                 <p>Photo 4 Description</p>
-                <img src="question4.jpg" alt="Photo 4">
+                <img src="4p.jpg" alt="Photo 4">
             </div>
+            <div class="image-item">
+                <p>Photo 4 Description</p>
+                <img src="5p.jpg" alt="Photo 4">
+            </div>
+            <div class="image-item">
+                <p>Photo 4 Description</p>
+                <img src="6p.jpg" alt="Photo 4">
+            </div>
+            <div class="image-item">
+                <p>Photo 4 Description</p>
+                <img src="7p.jpg" alt="Photo 4">
+            </div>
+            
         </div>
     </div>
     <div id="overlay" class="overlay"></div>
