--- a/room1/omr.html
+++ b/room1/omr.html
@@ -93,7 +93,7 @@
     <div id="timer"></div>
     <button onclick="submitAnswers()" id="submittext">Submit Answers</button>
 </div>
-
+<div class="scroll-to-bottom"></div>
 <script src="script.js"></script>
 
     <script>
@@ -115,7 +115,24 @@
                 e.returnValue = '';
             }
         });
+
+
+        document.addEventListener('DOMContentLoaded', function() {
+    const submitBtn = document.getElementById('submittext');
+
+    submitBtn.addEventListener('click', function() {
+        // Scroll to the bottom of the page
+        window.scrollTo({
+            top: document.body.scrollHeight,
+            behavior: 'smooth'
+        });
+    });
+});
+
+
+        
     </script>
+
     
 </body>
       </html>
